--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.12.8",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
-    "gulp-sass": "^2.2.0",
-    "browser-sync": "^2.12.8"
+    "gulp-livereload": "^3.8.1",
+    "gulp-sass": "^2.2.0"
   }
 }
